# src/main/java/com/demo/project/dto/TicketDetailsDto.java
@@ -1,0 +1,18 @@
+package com.demo.project.dto;
+
+import lombok.*;
+
+
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+@EqualsAndHashCode
+@ToString
+public class TicketDetailsDto {
+
+    private Long id;
+    private Double price;
+    private EventDto eventDto;
+
+}
